tests/cases/borrowing/errors/mutable-borrow-immutable.ari
fn touch(value: ref mut i64) -> i64 {
  return 0;
}

fn main() -> i64 {
  let number = 7;
  return touch(ref mut number);
}
